--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body> 
     <h1>Algum título</h1>
     <p>Estou aprendendo git</p>
+    <p>Alguma coisa exemplo de nova tarefa</p>
 </body>
 </html>
